--- a/src/app.css
+++ b/src/app.css
@@ -109,6 +109,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-success: hsl(var(--success-100));
+  --color-danger: hsl(var(--danger-100));
+  --color-brand: hsl(var(--accent-brand));
 }
 
 @layer base {
